@@ -4,6 +4,7 @@ Cascading-jdbc Change Log
 - upgrade redshift jdbc driver to 8.4-702.jdbc4
 - reduce size of test jars
 - replaceOnInsert support for MySQL
+- more robust query discovery
 
 2.5.1
 - update to cascading 2.5.2
